fixed IPad filter alignment

--- a/wp-content/themes/makeblog/version-2/css/header.css
+++ b/wp-content/themes/makeblog/version-2/css/header.css
@@ -154,6 +154,9 @@ h6 {
 	height:inherit;
 	margin:auto;
 }
+.sticky-header .dynamic-header-content {
+	display:none;
+}
 .close-dynamic-content {
 	width: 100%;
 	height: 200px;
